--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,7 @@
+<h1> Edit this article </h1>
 
-<%= form_for :post, url: posts_path do |f| %>
+
+<%= form_for :post, url: post_path(@post), method: :patch do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2> <%= pluralize(@post.errors.count, "error") %>
@@ -21,9 +23,8 @@
     <%= f.text_area :post_text %>
   </p>
 
-  <p>
-    <%= f.submit %>
-  </p>
+  <p><%= f.submit %></p>
 <% end %>
 
 <%= link_to 'Just kidding, back to all posts!', posts_path %>
+
