--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,9 +3,11 @@
 <%= link_to 'New post', new_post_path %>	
 
 	<% @posts.each do |post| %>
-		<h2><%= post.title %></h2>
+		<h2><%= link_to "#{post.title}", post %></h2>
 
 		<p><%= post.post_text %></p>
+
+		<%= link_to 'Edit', edit_post_path(post) %>
 
 	<% end %>
 
