--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,30 +1,11 @@
 <h1> Edit this article </h1>
 
 
-<%= form_for :post, url: post_path(@post), method: :patch do |f| %>
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2> <%= pluralize(@post.errors.count, "error") %>
-        prohibited this article from being saved:</h2>
-      <ul>
-        <% @post.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <p> 
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
+<%= render 'form' %>
 
-  <p>
-    <%= f.label :post_text %><br>
-    <%= f.text_area :post_text %>
-  </p>
+<%= link_to 'Delete this post', post_path(@post), method: :delete, data: { confirm: 'Are you absolutely positive?' } %>
+<br>
 
-  <p><%= f.submit %></p>
-<% end %>
 
 <%= link_to 'Just kidding, back to all posts!', posts_path %>
 
