--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,25 @@
 <html>
 <head>
   <title>Blog</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+
+  <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville|Oswald:700' rel='stylesheet' type='text/css'>
+  <%= stylesheet_link_tag 'normalize' %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+	<div id="header">
+		<h1>Stuff and Nonsense</h1>
+	</div>
+
+	<div id="container">
+
+		<%= yield %>
+
+	</div>
 
 </body>
 </html>
+
