--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,3 @@
 <%= render 'form' %>
 
-<%= link_to 'Just kidding, back to all posts!', posts_path %>
+<%= link_to 'Just kidding, back to all posts!', posts_path, class: 'link_button' %>
