--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,4 +8,4 @@
 
 <% end %>
  
-<%= link_to 'Back to all posts!', posts_path %>
+<%= link_to 'Back to all posts!', posts_path, class: 'link_button' %>
